# src/SamaEcole.Application/Classrooms/Queries/GetClassrooms/GetClassroomsQueryHandler.cs
@@ -25,7 +25,9 @@ public class GetClassroomsQueryHandler(IApplicationDbContext dbContext)
                 c.Capacity,
                 dbContext.Students.Count(s => s.ClassroomId == c.Id),
                 c.Cycle,
-                EF.Property<uint>(c, "xmin")))
+                EF.Property<uint>(c, "xmin"),
+                c.IsAccelerated,
+                c.TargetLevel))
             .ToListAsync(cancellationToken);
     }
 }
